@@ -24,8 +24,10 @@
 
 .cover {
     position: absolute;
-    width: 145px;
-    height: 145px;
+    top: 10px;
+    left: 10px;
+    width: 147px;
+    height: 147px;
     background-color: gray;
 }
 </style>
@@ -36,8 +38,8 @@
         <div style="border-top-left-radius: 100%"></div>
     </div>
     
-    <div class="cover" style="top: 90px; width: 225px;"></div>
-    <div class="cover" style="left: 90px; height: 225px;"></div>
+    <div class="cover" style="top: 88px; width: 225px;"></div>
+    <div class="cover" style="left: 88px; height: 225px;"></div>
 
 </body>
 </html>
